correções de bugs

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <img src="assets/img/Logo.svg" alt="Logo AluraBooks" class="cabecalho__imagem">
         </div>
         <div class="container">
-            <a href="#"><img src="assets/img/Favoritos.svg" alt="Meus Favoritos" class="cabelho__imagem"></a>
-            <a href="#"><img src="assets/img/Compras.svg" alt="Carrinhos de Compras" class="cabelho__imagem"></a>
-            <a href="#"><img src="assets/img/Usuário.svg" alt="Meu Perfil" class="cabelho__imagem" ></a>
+            <a href="#"><img src="assets/img/Favoritos.svg" alt="Meus Favoritos" class="cabecalho__imagem"></a>
+            <a href="#"><img src="assets/img/Compras.svg" alt="Carrinhos de Compras" class="cabecalho__imagem"></a>
+            <a href="#"><img src="assets/img/Usuário.svg" alt="Meu Perfil" class="cabecalho__imagem" ></a>
         </div>
     </header>
 
