correção de bugs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <a href="#"><img src="assets/img/Favoritos.svg" alt="Meus Favoritos" class="cabecalho__imagem"></a>
             <a href="#"><img src="assets/img/Compras.svg" alt="Carrinhos de Compras" class="cabecalho__imagem"></a>
-            <a href="#"><img src="assets/img/Usuário.svg" alt="Meu Perfil" class="cabecalho__imagem" ></a>
+            <a href="#"><img src="assets/img/Usuario.svg" alt="Meu Perfil" class="cabecalho__imagem" ></a>
         </div>
     </header>
 
